--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/main.css">
   <title>Sup surfing в Тбилиси</title>
-
+  <meta name="robots" content="noindex">
 </head>
 
 <body>
