add rent block desktop

--- a/index.html
+++ b/index.html
@@ -86,11 +86,70 @@
 
   <div class="rent">
     <div class="container">
-      <h2 class="title">Аренда сап борда
+      <h2 class="rent__title">Аренда сап борда<br>
         Что входит в аренду?</h2>
-      <div class="rent__wrapper">
-        <div class="rent__price"></div>
-        <div class="rent__description"></div>
+      <div class="row">
+        <div class="column rent__column-left">
+
+          <div class="rent__item-left">
+            <p class="rent__text">Как правило прогулки в будние дни можно забронировать за 1-2 дня. Прогулки в выходные
+              дни лучше бронировать заранее.</p>
+          </div>
+          <div class="rent__item-left">
+            <p class="rent__subtitle rent__subtitle--padding-32">Сап борды доступные для аренды:</p>
+            <ul class="rent__list">
+              <li class="rent__list-item rent__text">8 Sup досок iBoard Pro 11'6 (1 человек)</li>
+              <li class="rent__list-item rent__text">1 Big iBoard (вместимость до 10 человек)</li>
+            </ul>
+          </div>
+          <div class="rent__item-left">
+            <p class="rent__subtitle rent__subtitle--padding-32">Цены на аренду:</p>
+            <div class="rent__price">
+              <div class="rent__price-item">
+                <p class="rent__text">1 час:</p>
+                <p class="rent__text-big">20 ₾</p>
+              </div>
+              <div class="rent__price-item">
+                <p class="rent__text">1,5 часа:</p>
+                <p class="rent__text-big">30 ₾</p>
+              </div>
+              <div class="rent__price-item">
+                <p class="rent__text">2 часа:</p>
+                <p class="rent__text-big">40 ₾</p>
+              </div>
+              <div class="rent__price-item">
+                <p class="rent__text">1 сутки:</p>
+                <p class="rent__text-big">80 ₾</p>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <div class="column rent__column-right">
+          <div class="rent__item-right">
+            <p class="rent__subtitle">Инструктаж</p>
+            <p class="rent__text">Проводим предварительный инструктаж по технике безопасности и обучение
+              sup серфингу.</p>
+          </div>
+          <div class="rent__item-right">
+            <p class="rent__subtitle">Спасательный жилет</p>
+            <p class="rent__text">Выдаём спасательные жилеты на любой размер. Важное условие техники безопасности.</p>
+          </div>
+          <div class="rent__item-right">
+            <p class="rent__subtitle">Водонепроницаемая сумочка для телефона</p>
+            <p class="rent__text">Чтобы Вы всегда были
+              на связи на воде и могли сделать фото на память, выдаём водонепроницаемую сумочку для телефона
+              или гермомешок на выбор.</p>
+          </div>
+          <div class="rent__item-right">
+            <p class="rent__subtitle">Место для хранения вещей и переодевания.</p>
+            <p class="rent__text">У нас есть мобильная передевалка, а так же место где Вы можете оставить свои вещи и
+              подготовиться
+              к прогулке на sup бордах.
+              Если Вы вдруг забыли солнцезащитный крем, мы
+              с радостью его предоставим для комфортного катания.</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
