--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" /> -->
+  <!-- <link rel="stylesheet" href="./css/swiper.css"> -->
   <link rel="stylesheet" href="./css/main.css">
+
   <title>Sup surfing в Тбилиси</title>
   <meta name="robots" content="noindex">
 </head>
@@ -31,7 +35,7 @@
   <div class="subscribe">
     <button class="subscribe__btn">Забронируйте прогулку</button>
   </div>
-  <div class="hero">
+  <div class="hero none">
     <div class="container">
 
       <h1 class="hero__title">Sup surfing
@@ -194,8 +198,114 @@
       </div>
     </div>
   </div>
-  <script src="./js/main.js"></script>
 
+  <div class="services">
+    <div class="container">
+      <h2 class="title-block">Дополнительные услуги</h2>
+
+      <!--  -->
+      <div class="swiper services__swiper">
+
+        <!-- Additional required wrapper -->
+        <!--   -->
+        <div class="swiper-wrapper services__swiper-wrapper">
+          <!-- Slides -->
+          <!-- swiper-slide -->
+
+          <div class="swiper-slide services__slide">
+            <div class="service__body">
+              <h5 class="text-bold services__text-bold">Сопровождение и помощь</h5>
+              <ul class="services__list services__list_padding">
+                <li class="text services__list-item services__list-item__circle">Индивидуальное обучение</li>
+                <li class="text services__list-item services__list-item__circle">Занятия с детьми </li>
+                <li class="text services__list-item services__list-item__circle">Фото по желанию</li>
+              </ul>
+              <p class="text">Стоимость:</p>
+              <ul class="services__list">
+                <li class="text services__list-item">+ 5 ₾ - 30 мин </li>
+                <li class="text services__list-item">+ 10 ₾ - 1 час и больше</li>
+              </ul>
+              <p class="text services__text-comment">*(к стоимости аренды сапа)</p>
+            </div>
+            <span class="text-bold services__footer">от 5 ₾</span>
+          </div>
+
+          <div class="swiper-slide services__slide">
+            <div class="service__body">
+              <h5 class="text-bold services__text-bold">«Сплав по морю» (+18)</h5>
+              <p class="text">Не обязательно возвращаться на точку старта! Если Вы хотите устроить sup сплав и завершить
+                катание в другой точке, то такая возможность есть. Вам необязательно тратить время и силы, чтобы
+                вернуться назад.
+                Мы заберем! 🚗</p>
+              <p class="text">Вы завершаете аренду на другом конце Тбилисского моря. Занимает примерно
+                1,5-2 часа в зависимости от скорости ветра.</p>
+              <p class="text">Сопровождение по желанию и зависит от уровня катания райдера.</p>
+            </div>
+            <span class="text-bold services__footer">50 ₾</span>
+          </div>
+
+          <div class="swiper-slide services__slide">
+            <div class="service__body">
+              <h5 class="text-bold services__text-bold">«Не могу вернуться!»</h5>
+              <p class="text">Если Вы увлеклись катанием
+                и потерялись, унесло течением или просто нет сил вернуться к точке старта, но Вы не планировали сплав,
+                то для нас это не проблема.</p>
+              <p class="text">Просто свяжитесь с нами и передайте свои координаты, мы заберём Ваши вещи и приедем за
+                Вами на авто.</p>
+            </div>
+            <span class="text-bold services__footer">+10 ₾ к часу</span>
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+
+
+
+    <div class="slider none">
+      <div class="container special">
+
+        <div class="swipe-block">
+          <!-- Slider main container -->
+          <div class="swiper">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide" style="width: 280px;">Slide 1</div>
+              <div class="swiper-slide" style="width: 280px;">Slide 2</div>
+              <div class="swiper-slide" style="width: 280px;">Slide 3</div>
+              <div class="swiper-slide" style="width: 280px;">Slide 133</div>
+              <div class="swiper-slide" style="width: 280px;">Slide 233</div>
+              <div class="swiper-slide" style="width: 280px;">Slide 333</div>
+              <div class="swiper-slide" style="width: 280px;">Slide 155</div>
+              <div class="swiper-slide" style="width: 280px;">Slide 255</div>
+              <div class="swiper-slide" style="width: 280px;">Slide 388</div>
+            </div>
+            <!-- If we need pagination -->
+            <!-- <div class="swiper-pagination"></div> -->
+
+            <!-- If we need navigation buttons -->
+
+            <!-- If we need scrollbar -->
+
+          </div>
+
+        </div>
+        <div class="btn-wrapper">
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+          <div class="swiper-scrollbar"></div>
+        </div>
+      </div>
+
+    </div>
+
+
+    <script src="./js/main.js"></script>
+    <script type="module" src="./js/swiper.js">
+
+    </script>
 </body>
 
 </html>
