display hero block

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <div class="subscribe">
     <button class="subscribe__btn">Забронируйте прогулку</button>
   </div>
-  <div class="hero none">
+  <div class="hero">
     <div class="container">
 
       <h1 class="hero__title">Sup surfing
