add tours block

--- a/index.html
+++ b/index.html
@@ -261,6 +261,29 @@
 
     </div>
 
+    <div class="tours">
+      <div class="container">
+        <h2 class="title-block">Однодневные Sup туры</h2>
+        <div class="row">
+          <div class="column image-wrapper">
+            <img src="./images/images/about.jpg" alt="" class="about__image">
+          </div>
+          <div class="column weather__description">
+            <p class="text">Мы устраиваем sup туры недалеко от Тбилиси на Жинвальское водохранилище, озеро Сиони, озеро
+              Паравани, Цалкинское водохранилище, озеро Базалети. Трансфер от Тбилиси
+              и обратно мы берём на себя.</p>
+            <p class="text">Вас ждёт двухчасовое катание на сапах в самых известных
+              и живописных водоемах Грузии. Проводим инструктаж, выдаём спасательные жилеты и водонепроницаемые чехлы
+              для телефонов.</p>
+            <p class="text">Все sup туры бронируются заранее. Для уточнения цены свяжитесь с нами, так как она зависит
+              от количества человек
+              и выбранного вами водоема.</p>
+
+          </div>
+        </div>
+      </div>
+    </div>
+
 
 
     <div class="slider none">
