--- a/index.html
+++ b/index.html
@@ -260,75 +260,93 @@
       </div>
 
     </div>
-
-    <div class="tours">
-      <div class="container">
-        <h2 class="title-block">Однодневные Sup туры</h2>
-        <div class="row">
-          <div class="column image-wrapper">
-            <img src="./images/images/about.jpg" alt="" class="about__image">
-          </div>
-          <div class="column weather__description">
-            <p class="text">Мы устраиваем sup туры недалеко от Тбилиси на Жинвальское водохранилище, озеро Сиони, озеро
-              Паравани, Цалкинское водохранилище, озеро Базалети. Трансфер от Тбилиси
-              и обратно мы берём на себя.</p>
-            <p class="text">Вас ждёт двухчасовое катание на сапах в самых известных
-              и живописных водоемах Грузии. Проводим инструктаж, выдаём спасательные жилеты и водонепроницаемые чехлы
-              для телефонов.</p>
-            <p class="text">Все sup туры бронируются заранее. Для уточнения цены свяжитесь с нами, так как она зависит
-              от количества человек
-              и выбранного вами водоема.</p>
-
-          </div>
+  </div>
+  <div class="tours">
+    <div class="container">
+      <h2 class="title-block">Однодневные Sup туры</h2>
+      <div class="row">
+        <div class="column image-wrapper">
+          <img src="./images/images/about.jpg" alt="" class="about__image">
+        </div>
+        <div class="column weather__description">
+          <p class="text">Мы устраиваем sup туры недалеко от Тбилиси на Жинвальское водохранилище, озеро Сиони, озеро
+            Паравани, Цалкинское водохранилище, озеро Базалети. Трансфер от Тбилиси
+            и обратно мы берём на себя.</p>
+          <p class="text">Вас ждёт двухчасовое катание на сапах в самых известных
+            и живописных водоемах Грузии. Проводим инструктаж, выдаём спасательные жилеты и водонепроницаемые чехлы
+            для телефонов.</p>
+          <p class="text">Все sup туры бронируются заранее. Для уточнения цены свяжитесь с нами, так как она зависит
+            от количества человек
+            и выбранного вами водоема.</p>
         </div>
       </div>
-    </div>
 
-
-
-    <div class="slider none">
-      <div class="container special">
-
-        <div class="swipe-block">
-          <!-- Slider main container -->
-          <div class="swiper">
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-              <!-- Slides -->
-              <div class="swiper-slide" style="width: 280px;">Slide 1</div>
-              <div class="swiper-slide" style="width: 280px;">Slide 2</div>
-              <div class="swiper-slide" style="width: 280px;">Slide 3</div>
-              <div class="swiper-slide" style="width: 280px;">Slide 133</div>
-              <div class="swiper-slide" style="width: 280px;">Slide 233</div>
-              <div class="swiper-slide" style="width: 280px;">Slide 333</div>
-              <div class="swiper-slide" style="width: 280px;">Slide 155</div>
-              <div class="swiper-slide" style="width: 280px;">Slide 255</div>
-              <div class="swiper-slide" style="width: 280px;">Slide 388</div>
+      <div class="swipe-block tours__swiper">
+        <!-- Slider main container -->
+        <div class="swiper">
+          <!-- Additional required wrapper -->
+          <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide lakes__slide">
+              <figure>
+                <img src="./images/images/zinval.jpg" alt="" class="lakes__img">
+                <figcaption class="text-bold lakes__text">Жинвальское водохранилище</figcaption>
+              </figure>
             </div>
-            <!-- If we need pagination -->
-            <!-- <div class="swiper-pagination"></div> -->
 
-            <!-- If we need navigation buttons -->
+            <div class="swiper-slide lakes__slide">
+              <figure>
+                <img src="./images/images/sioni.jpg" alt="" class="lakes__img">
+                <figcaption class="text-bold lakes__text">озеро Сиони</figcaption>
+              </figure>
+            </div>
 
-            <!-- If we need scrollbar -->
+            <div class="swiper-slide lakes__slide">
+              <figure>
+                <img src="./images/images/paravani.jpg" alt="" class="lakes__img">
+                <figcaption class="text-bold lakes__text">озеро Паравани</figcaption>
+              </figure>
+            </div>
 
+            <div class="swiper-slide lakes__slide">
+              <figure>
+                <img src="./images/images/bazaleti.jpg" alt="" class="lakes__img">
+                <figcaption class="text-bold lakes__text">озеро Базалети</figcaption>
+              </figure>
+            </div>
+
+            <div class="swiper-slide lakes__slide">
+            </div>
           </div>
 
+          <!-- If we need pagination -->
+          <!-- <div class="swiper-pagination"></div> -->
+
+          <!-- If we need navigation buttons -->
+
+          <!-- If we need scrollbar -->
+
         </div>
-        <div class="btn-wrapper">
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
-          <div class="swiper-scrollbar"></div>
-        </div>
+
+      </div>
+
+      <div class="btn-wrapper">
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
       </div>
 
     </div>
+  </div>
 
 
-    <script src="./js/main.js"></script>
-    <script type="module" src="./js/swiper.js">
 
-    </script>
+
+
+
+  <script src="./js/main.js"></script>
+  <script type="module" src="./js/swiper.js">
+
+  </script>
 </body>
 
 </html>
