add contacts, footer block

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="robots" content="noindex">
 </head>
 
-<body>
+<body class="body">
   <header class="header">
     <!-- <div class="header__wrapper"></div> -->
     <img src="./images/logo/logo.svg" alt="sup.ge logo" class="logo header__logo">
@@ -316,7 +316,14 @@
             </div>
 
             <div class="swiper-slide lakes__slide">
+              <figure>
+                <img src="./images/images/zinval.jpg" alt="" class="lakes__img">
+                <figcaption class="text-bold lakes__text">Жинвальское водохранилище</figcaption>
+              </figure>
             </div>
+
+            <!-- <div class="swiper-slide lakes__slide">
+            </div> -->
           </div>
 
           <!-- If we need pagination -->
@@ -337,6 +344,61 @@
 
     </div>
   </div>
+
+  <div class="contacts">
+    <div class="container">
+      <h2 class="title-block">Где нас можно найти?</h2>
+
+      <div class="contacts__row">
+        <div class="contacts__map">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d5956.409737657439!2d44.880932306065255!3d41.71609787529984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sge!4v1684010750423!5m2!1sen!2sge"
+            width="950" height="275" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="contacts__info">
+          <div class="contacts__text">
+            <p class="text">г. Тбилиси, Грузия
+              Тбилисское море</p>
+            <a href="tel:++995599167632" class="text contacts__link">+995 599 16 76 32</a>
+            <a href="mailto:SupTbilisiSea@gmail.com"
+              class="text contacts__link link__underline">SupTbilisiSea@gmail.com</a>
+          </div>
+          <div class="contacts__social social">
+            <a href="" class="social__item"><img src="./images/icons/tg.svg" alt="" class="socail__img"></a>
+            <a href="" class="social__item"><img src="/images/icons/whatapp.svg" alt="" class="socail__img"></a>
+            <a href="" class="social__item"><img src="./images/icons/instagr.svg" alt="" class="socail__img"></a>
+            <a href="" class="social__item"><img src="./images/icons/fb.svg" alt="" class="socail__img"></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <footer class="footer">
+    <div class="container footer__container">
+
+      <div class="row">
+        <div class="column">
+          <a href="tel:++995599167632" class="text footer__tel">+995 599 16 76 32</a>
+          <a href="tel:++995599167632" class="text footer__tel">+995 599 16 76 32</a>
+          <a href="tel:++995599167632" class="text footer__tel">+995 599 16 76 32</a>
+        </div>
+        <div class="column">
+          <h6 class="footer__title">
+            Свяжитесь с нами для сотрудничества
+          </h6>
+          <p class="text footer__text">Хотите провести корпоратив, организовать праздник или йогу
+            на сапе? Мы открыты к разным видам сотрудничества. </p>
+          <p class="text footer__text">Для детальной информации свяжитесь с нами.</p>
+          <a href="mailto:SupTbilisiSea@gmail.com" class="text footer__text link__underline">SupTbilisiSea@gmail.com</a>
+        </div>
+
+      </div>
+
+    </div>
+  </footer>
 
 
 
