add instagram block

--- a/index.html
+++ b/index.html
@@ -344,6 +344,63 @@
 
     </div>
   </div>
+  <div class="instagram">
+    <div class="container">
+      <div class="row">
+        <h2 class="title">Подпишитесь на наш Instagram</h2>
+        <a href="" class="title link__underline ">@sup.ge</a>
+      </div>
+
+      <div class="swipe-block tours__swiper">
+        <!-- Slider main container -->
+        <div class="swiper-inst">
+          <!-- Additional required wrapper -->
+          <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide">
+              <div class="instagram__slide">
+                <img src="./images/images/zinval.jpg" alt="" class="instagram__img">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="instagram__slide">
+                <img src="./images/images/zinval.jpg" alt="" class="instagram__img">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="instagram__slide">
+                <img src="./images/images/zinval.jpg" alt="" class="instagram__img">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="instagram__slide">
+                <img src="./images/images/zinval.jpg" alt="" class="instagram__img">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="instagram__slide">
+                <img src="./images/images/zinval.jpg" alt="" class="instagram__img">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="instagram__slide">
+                <img src="./images/images/zinval.jpg" alt="" class="instagram__img">
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+
+      <div class="instagram__btn-wrapper">
+        <div class="swiper-button-prev swiper-inst-next"></div>
+        <div class="swiper-button-next swiper-inst-prev"></div>
+      </div>
+
+    </div>
+  </div>
 
   <div class="contacts">
     <div class="container">
@@ -406,9 +463,10 @@
 
 
   <script src="./js/main.js"></script>
-  <script type="module" src="./js/swiper.js">
+  <script type="module" src="./js/swiper.js"></script>
+  <script type="module" src="./js/swiper-inst.js"></script>
 
-  </script>
+
 </body>
 
 </html>
