change flex with grid

--- a/index.html
+++ b/index.html
@@ -45,44 +45,49 @@
     </div>
   </div>
   <div class="about">
-    <div class="container">
-      <h2 class="title-block about__title">О нас</h2>
-      <div class="row">
-        <div class="column image-wrapper">
-          <img src="./images/images/about.jpg" alt="" class="about__image">
-        </div>
-        <div class="column about__description">
-          <p class="text about__text">
-            SUP - гребля одним веслом на доске. Подходит для людей всех возрастов и уровней подготовки, очень прост в
-            освоении.
-            Уже с 7 лет дети начинают уверенно стоять на доске.</p>
-          <p class="text about__text">Sup board даёт возможность в прямом смысле слова гулять
-            по Тбилисскому морю и наслаждаться природой Грузии.
-            Вы не только получите много впечатлений, но и с пользой проведёте время, так как это отличная тренировка для
-            тела.</p>
-          <p class="text about__text">Sup surfing - спорт для безветренной погоды,
-            но при небольшом ветре мы устраиваем сплавы.</p>
-          <p class="text about__text">Берите с собой четвероногих друзей, мы pet friendly ❤️</p>
-        </div>
+    <div class="container container-grid">
+      <div class="grid-title">
+        <h2 class="title-block about__title">О нас</h2>
       </div>
+
+      <div class="image-wrapper grid-left">
+        <img src="./images/images/about.jpg" alt="" class="block-image">
+      </div>
+      <div class="grid-right">
+        <p class="text about__text">
+          SUP - гребля одним веслом на доске. Подходит для людей всех возрастов и уровней подготовки, очень прост в
+          освоении.
+          Уже с 7 лет дети начинают уверенно стоять на доске.</p>
+        <p class="text about__text">Sup board даёт возможность в прямом смысле слова гулять
+          по Тбилисскому морю и наслаждаться природой Грузии.
+          Вы не только получите много впечатлений, но и с пользой проведёте время, так как это отличная тренировка для
+          тела.</p>
+        <p class="text about__text">Sup surfing - спорт для безветренной погоды,
+          но при небольшом ветре мы устраиваем сплавы.</p>
+        <p class="text about__text">Берите с собой четвероногих друзей, мы pet friendly ❤️</p>
+      </div>
+
     </div>
   </div>
 
   <div class="weather">
-    <div class="container">
-      <h2 class="title-block weather__title">Погода для sup серфинга</h2>
-      <div class="row">
-        <div class="column image-wrapper">
-          <img src="./images/images/about.jpg" alt="" class="about__image">
-        </div>
-        <div class="column weather__description">
-          <p class="text weather__text">
-            Для сап-серфинга, как и для любых других видов водного спорта, погода играет важную роль. Сильный ветер
-            или штормовые условия могут сделать sup серфинг небезопасным и неудобным. Кроме того, погода может влиять на
-            настроение и настроение человека, что может отразиться на его способности и результативности. </p>
-          <p class="text weather__text">Поэтому для наилучшего опыта запланируйте ваш отдых учитывая погоду.</p>
-        </div>
+    <div class="container container-grid">
+      <div class="grid-title">
+        <h2 class="title-block weather__title">Погода для sup серфинга</h2>
       </div>
+
+
+      <div class="grid-left image-wrapper">
+        <img src="./images/images/about.jpg" alt="" class="about__image">
+      </div>
+      <div class="grid-right weather__description">
+        <p class="text weather__text">
+          Для сап-серфинга, как и для любых других видов водного спорта, погода играет важную роль. Сильный ветер
+          или штормовые условия могут сделать sup серфинг небезопасным и неудобным. Кроме того, погода может влиять на
+          настроение и настроение человека, что может отразиться на его способности и результативности. </p>
+        <p class="text weather__text">Поэтому для наилучшего опыта запланируйте ваш отдых учитывая погоду.</p>
+      </div>
+
     </div>
   </div>
 
@@ -263,12 +268,14 @@
   </div>
   <div class="tours">
     <div class="container">
-      <h2 class="title-block">Однодневные Sup туры</h2>
-      <div class="row">
-        <div class="column image-wrapper">
+      <div class="container-grid">
+        <div class="grid-title">
+          <h2 class="title-block">Однодневные Sup туры</h2>
+        </div>
+        <div class="grid-left image-wrapper">
           <img src="./images/images/about.jpg" alt="" class="about__image">
         </div>
-        <div class="column weather__description">
+        <div class="grid-right weather__description">
           <p class="text">Мы устраиваем sup туры недалеко от Тбилиси на Жинвальское водохранилище, озеро Сиони, озеро
             Паравани, Цалкинское водохранилище, озеро Базалети. Трансфер от Тбилиси
             и обратно мы берём на себя.</p>
@@ -279,7 +286,9 @@
             от количества человек
             и выбранного вами водоема.</p>
         </div>
+
       </div>
+
 
       <div class="swipe-block tours__swiper">
         <!-- Slider main container -->
@@ -410,7 +419,7 @@
         <div class="contacts__map">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d5956.409737657439!2d44.880932306065255!3d41.71609787529984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sge!4v1684010750423!5m2!1sen!2sge"
-            width="950" height="275" style="border:0;" allowfullscreen="" loading="lazy"
+            width="100%" height="275" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <div class="contacts__info">
